renamed author, ignored parcel-cache

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,7 @@
     "clean": "rm -rf build tsconfig.tsbuildinfo dist .parcel-cache"
   },
   "keywords": [],
-  "author": "ashley@codecapers.com.au",
+  "author": "ongkristopher@gmail.com",
   "license": "MIT",
   "devDependencies": {
     "@types/react": "^18.0.14",
